# rasberryPi_fridge

./: .env  .gitignore  API_DOCUMENTATION.md  MOBILE_APP_INTEGRATION.md  README.md  RENDER_DEPLOY.md  chat_api_usage.md  check_dependencies.py  env.example  raspberry-pi-system-diagram.md  render.yaml  run_api.py  run_backend.py  run_mock_server.bat  run_simulator.bat  run_simulator.py  run_simulator_real_api.bat  start_fridge.py  test_api.py  test_guardrail.py  test_image_upload.py  test_local.py  test_with_image.py
backend/: .env  __init__.py  image_guardrail.py  main.py  pyproject.toml  requirements.txt  schemas.py
backend/agents/: expiration_agent.py  fridge_agent.py
backend/data/: fridge_log.json
backend/routes/: __init__.py  chat.py  items.py  notifications.py  status.py  upload.py
backend/services/: vision.py
backend/utils/: __init__.py  db.py  logger.py
dashboard/: dashboard.js  index.html  style.css
docs/: api_integration_guide.md  api_reference.md  hardware_setup.md  setup_simulator.md
frontend/: .env.production  build.sh  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.jsx
frontend/src/components/: AiAnalysisTabs.jsx  ChatInterface.jsx  FoodItem.jsx  SensorCard.jsx  UserItemsManager.jsx
frontend/src/pages/: Dashboard.jsx
raspberry-pi/: .env.example  README.md  api.py  camera.py  config.py  main.py  requirements.txt  sensors.py
simulator/: README.md  __init__.py  api.py  chat_agent.py  config.py  mock_api.py  mock_camera.py  mock_sensors.py  mock_server.py  requirements.txt  simulator.py
(+1 files in other folders)
